agregadas estructuras basicas about quienessomos y contactenos

--- a/quienessomos.html
+++ b/quienessomos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 		<head>
-				<title>Dashboard-Guayaquiltransactions</title>
+				<title>Quienes somos-Guayaquiltransactions</title>
 				<meta charset="utf-8">
 				<link rel="stylesheet" href="bs4/css/bootsrap.css">
 				<link rel="stylesheet" href="bs4/css/bootstrap-grid.css">
