--- a/quienessomos.html
+++ b/quienessomos.html
@@ -3,8 +3,9 @@
 		<head>
 				<title>Quienes somos-Guayaquiltransactions</title>
 				<meta charset="utf-8">
-				<link rel="stylesheet" href="bs4/css/bootsrap.css">
-				<link rel="stylesheet" href="bs4/css/bootstrap-grid.css">
+				<link rel="stylesheet" href="bs/css/bootstrap.css">
+                <link rel="stylesheet" href="bs/css/bootstrap-grid.css">
+                <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		</head>
 		<body>
@@ -17,17 +18,17 @@
 					</div>
 
 					<div class="row">
-						<div class="col-12">
-							<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-								<ul>
-									<li class="nav-item"><a href="">Dash</a></li>
-									<li class="nav-item"><a href="">Sobre el proyecto</a></li>
-									<li class="nav-item"><a href="">quienes somos</a></li>
-									<li class="nav-item"><a href="">Contactenos</a></li>
-								</ul>	
-							</nav>
-						</div>
-					</div>
+                        <div class="col-12">
+                            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                                <ul class="nav navbar-nav">
+                                    <li class="nav-item"><a class="nav-link" href="index.html">Dash</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="about.html">Sobre el proyecto</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="quienessomos.html">quienes somos</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="contactenos.html">Contactenos</a></li>
+                                </ul>	
+                            </nav>
+                        </div>
+                    </div>
 
 					<div class="row">
 						<div>
