footer y diviones en cajas

--- a/about.html
+++ b/about.html
@@ -11,10 +11,12 @@
 		<body>
 				<div class="container">
 					<div class="row">
-						<header>
-								<h1>GuayaquilTransactions</h1>
-								<h2>Dashboard project</h2>
-						</header>
+						<div class="col-12">
+							<header>
+									<h1>GuayaquilTransactions</h1>
+									<h2>Dashboard project</h2>
+							</header>
+						</div>
 					</div>
 
 					<div class="row">
@@ -23,22 +25,74 @@
                                 <ul class="nav navbar-nav">
                                     <li class="nav-item"><a class="nav-link" href="index.html">Dash</a></li>
                                     <li class="nav-item"><a class="nav-link" href="about.html">Sobre el proyecto</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="quienessomos.html">quienes somos</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="contactenos.html">Contactenos</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos?</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
                                 </ul>	
                             </nav>
                         </div>
                      </div>
 
 					<div class="row">
-						<div>
-							
+						<div class="col-12">
+							<h2>Guayaquil Transactions</h2>
+						</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-8">
+							<h3>Mision</h3>
+							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus efficitur hendrerit imperdiet. Donec commodo laoreet tellus a ultrices. 
+								Aliquam a turpis sed urna luctus ultricies. Sed consequat nibh ac nulla vulputate molestie. Praesent iaculis nunc ut pulvinar ultricies. 
+								Vestibulum tincidunt eget urna ac congue. Suspendisse eget tortor eget mauris posuere hendrerit at sit amet urna. Curabitur tortor eros, 
+								pellentesque id tincidunt ut, iaculis vitae lacus. Duis malesuada sem in urna malesuada, quis molestie purus eleifend. Vivamus euismod maximus 
+								lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque vel urna eget diam venenatis gravida. 
+								Curabitur vitae interdum nibh. Phasellus ac orci urna. Mauris et fringilla leo. Proin consectetur pulvinar mattis. Proin molestie ipsum quis risus
+								accumsan facilisis. Nam tempus ullamcorper augue ut varius. Sed posuere nulla nibh. Vestibulum porta quis nulla ac semper. Cras hendrerit cursus 
+								sapien, molestie mattis quam tempor vel. Aliquam varius vitae metus quis lobortis. Phasellus quis commodo purus. Praesent condimentum nisi nec 
+								massa eleifend fringilla. Proin non elementum sapien. Sed dictum, ante non viverra viverra, massa diam bibendum dui, ac gravida enim felis a augue. 
+							</p>
+
+						</div>
+						<div class="col-4">
+							<img src="#" alt="">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-4">
+							<img src="#" alt="">
+						</div>
+						<div class="col-8">
+							<h3>Vision</h3>
+							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus efficitur hendrerit imperdiet. Donec commodo laoreet tellus a ultrices. 
+								Aliquam a turpis sed urna luctus ultricies. Sed consequat nibh ac nulla vulputate molestie. Praesent iaculis nunc ut pulvinar ultricies. 
+								Vestibulum tincidunt eget urna ac congue. Suspendisse eget tortor eget mauris posuere hendrerit at sit amet urna. Curabitur tortor eros, 
+								pellentesque id tincidunt ut, iaculis vitae lacus. Duis malesuada sem in urna malesuada, quis molestie purus eleifend. Vivamus euismod maximus 
+								lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque vel urna eget diam venenatis gravida. 
+								Curabitur vitae interdum nibh. Phasellus ac orci urna. Mauris et fringilla leo. Proin consectetur pulvinar mattis. Proin molestie ipsum quis risus 
+								accumsan facilisis. Nam tempus ullamcorper augue ut varius. Sed posuere nulla nibh. Vestibulum porta quis nulla ac semper. Cras hendrerit cursus
+								sapien, molestie mattis quam tempor vel. Aliquam varius vitae metus quis lobortis. Phasellus quis commodo purus. Praesent condimentum nisi nec
+								massa eleifend fringilla. Proin non elementum sapien. Sed dictum, ante non viverra viverra, massa diam bibendum dui, ac gravida enim felis a augue.
+							</p>
 						</div>
 					</div>
 
 					<div class="row">
-						<footer>
-						</footer>
+						<div class="col-12">
+							<footer>
+								<div class="container"></div>
+									<div class="row">
+										<div class="col-8">
+											<p>Escuela Superior Politécnica del Litoral <br>
+												Desarrollo de Aplicaciones Web <br>
+												All Rights Reserved. <br>
+											</p>
+										</div>
+										<div class="col-4">
+											<img src="#" alt="ESPOL">
+											<img src="#" alt="FIEC">
+										</div>
+									</div>
+							</footer>
+						</div>
 					</div>
 				</div>
 		</body>
