--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 		<body>
 				<div class="container">
 					<div class="row">
-						<header>
-								<h1>GuayaquilTransactions</h1>
-								<h2>Dashboard project</h2>
-						</header>
+						<div class="col-12">
+							<header>
+									<h1>GuayaquilTransactions</h1>
+									<h2>Dashboard project</h2>
+							</header>
+						</div>
 					</div>
 
 					<div class="row">
@@ -23,8 +25,8 @@
 								<ul class="nav navbar-nav">
 									<li class="nav-item"><a class="nav-link" href="index.html">Dash</a></li>
 									<li class="nav-item"><a class="nav-link" href="about.html">Sobre el proyecto</a></li>
-									<li class="nav-item"><a class="nav-link" href="quienessomos.html">quienes somos</a></li>
-									<li class="nav-item"><a class="nav-link" href="contactenos.html">Contactenos</a></li>
+									<li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos?</a></li>
+									<li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
 								</ul>	
 							</nav>
 						</div>
@@ -37,7 +39,6 @@
 								<a href="#">Resumen General</a>
 								<a href="#">Datos por Cantón</a>
 								<a href="#">Resultados</a>
-								
 							</div>	
 						</div>
 						<div class="col-9">
@@ -46,8 +47,23 @@
 					</div>
 
 					<div class="row">
-						<footer>
-						</footer>
+						<div class="col-12">
+							<footer>
+								<div class="container"></div>
+									<div class="row">
+										<div class="col-8">
+											<p>Escuela Superior Politécnica del Litoral <br>
+												Desarrollo de Aplicaciones Web <br>
+												All Rights Reserved. <br>
+											</p>
+										</div>
+										<div class="col-4">
+											<img src="#" alt="ESPOL">
+											<img src="#" alt="FIEC">
+										</div>
+									</div>
+							</footer>
+						</div>
 					</div>
 				</div>
 		</body>
