--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 				<title>Sobre el proyecto-Guayaquiltransactions</title>
 				<meta charset="utf-8">
 				<link rel="stylesheet" href="bs/css/bootstrap.css">
-                <link rel="stylesheet" href="bs/css/bootstrap-grid.css">
+				<link rel="stylesheet" href="bs/css/bootstrap-grid.css">
+				<link rel="stylesheet" href="css/proyecto.css">
                 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		</head>
@@ -38,7 +39,7 @@
 						</div>
                     </div>
                     <div class="row">
-                        <div class="col-8">
+                        <div class="col-xs-6 col-md-8" >
 							<h3>Mision</h3>
 							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus efficitur hendrerit imperdiet. Donec commodo laoreet tellus a ultrices. 
 								Aliquam a turpis sed urna luctus ultricies. Sed consequat nibh ac nulla vulputate molestie. Praesent iaculis nunc ut pulvinar ultricies. 
@@ -52,15 +53,15 @@
 							</p>
 
 						</div>
-						<div class="col-4">
-							<img src="#" alt="">
+						<div class="col-xs-6 col-md-4">
+							<img src="images/Mision1.png" class="img-responsive" alt="Mision" width="75%">
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-4">
-							<img src="#" alt="">
+						<div class="col-xs-6 col-md-4">
+							<img src="images/VISION.jpg" class="img-responsive" alt="Vision" width="75%">
 						</div>
-						<div class="col-8">
+						<div class="col-xs-6 col-md-8">
 							<h3>Vision</h3>
 							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus efficitur hendrerit imperdiet. Donec commodo laoreet tellus a ultrices. 
 								Aliquam a turpis sed urna luctus ultricies. Sed consequat nibh ac nulla vulputate molestie. Praesent iaculis nunc ut pulvinar ultricies. 
@@ -80,15 +81,15 @@
 							<footer>
 								<div class="container"></div>
 									<div class="row">
-										<div class="col-8">
+										<div class="col-xs-6 col-md-8">
 											<p>Escuela Superior Politécnica del Litoral <br>
 												Desarrollo de Aplicaciones Web <br>
 												All Rights Reserved. <br>
 											</p>
 										</div>
-										<div class="col-4">
-											<img src="#" alt="ESPOL">
-											<img src="#" alt="FIEC">
+										<div class="col-xs-6 col-md-4">
+											<img src="images/logoEspol.png" class="img-responsive" alt="ESPOL">
+											<img src="images/logoFiec.png" class="img-responsive" alt="FIEC">
 										</div>
 									</div>
 							</footer>
