--- a/quienessomos.html
+++ b/quienessomos.html
@@ -4,7 +4,8 @@
 				<title>Quienes somos-Guayaquiltransactions</title>
 				<meta charset="utf-8">
 				<link rel="stylesheet" href="bs/css/bootstrap.css">
-                <link rel="stylesheet" href="bs/css/bootstrap-grid.css">
+				<link rel="stylesheet" href="bs/css/bootstrap-grid.css">
+				<link rel="stylesheet" href="css/proyecto.css">
                 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		</head>
@@ -67,8 +68,8 @@
 											</p>
 										</div>
 										<div class="col-4">
-											<img src="#" alt="ESPOL">
-											<img src="#" alt="FIEC">
+											<img src="images/logoEspol.png" class="img-responsive" alt="ESPOL">
+											<img src="images/logoFiec.png" class="img-responsive" alt="FIEC">
 										</div>
 									</div>
 							</footer>
