--- a/contactenos.html
+++ b/contactenos.html
@@ -34,8 +34,48 @@
                     </div>
 
 					<div class="row">
-						<div>
+						<div class="col-7">
+							<h3>Contactenos</h3>
+							<form>
+								<div class="form-group row">
+									<label for="nombres" class="col-2 col-form-label">Nombres:</label>
+									<div class="col-10">
+										<input type="text" class="form-control" id="example-text-input" placeholder="Ingrese su Nombre">
+									</div>
+								</div>
+								<div class="form-group row" >
+										<label for="apellidos" class="col-2 col-form-label">Apellidos:</label>
+										<div class="col-10">
+											<input type="text" class="form-control" id="apellidos" placeholder="Ingrese sus Apellidos">
+										</div>
+								</div>
+								<div class="form-group row">
+									<label for="fecha" class="col-2 col-form-label">Edad:</label>
+									<div class="col-10">
+										<input class="form-control" type="date"  id="fecha">
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label for="Email" class="col-2 col-form-label">Email:</label>
+									<div class="col-10">
+										<input class="form-control" type="email"  id="Email" placeholder="Ingrese su Email">
+									</div>
+								</div>
+								<div class="form-group row">
+									<label for="Comentario" class="col-2 col-form-label">Comentario: </label>
+									<div class="col-10">
+										<textarea class="form-control" id="comentario" rows="3"></textarea>
+									</div>  
+								</div>
+								<button type="button" class="btn btn-primary">Enviar</button>
+								
+							</form>
+
+						</div>
+						<div class="col-5">
 							
+
 						</div>
 					</div>
 
