Validacion preliminar de HTML hecha, polyfill agregado para date input

--- a/about.html
+++ b/about.html
@@ -54,12 +54,12 @@
 
 						</div>
 						<div class="col-xs-6 col-md-4">
-							<img src="images/Mision1.png" class="img-responsive" alt="Mision" width="75%">
+							<img src="images/Mision1.png" class="img-responsive" alt="Mision">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-6 col-md-4">
-							<img src="images/VISION.jpg" class="img-responsive" alt="Vision" width="75%">
+							<img src="images/VISION.jpg" class="img-responsive" alt="Vision">
 						</div>
 						<div class="col-xs-6 col-md-8">
 							<h3>Vision</h3>
