--- a/about.html
+++ b/about.html
@@ -53,12 +53,12 @@
 							</p>
 
 						</div>
-						<div class="col-xs-6 col-md-4">
+						<div class="col-xs-6 col-md-4 img-container">
 							<img src="images/Mision1.png" class="img-responsive" alt="Mision">
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-6 col-md-4">
+						<div class="col-xs-6 col-md-4 img-container">
 							<img src="images/VISION.jpg" class="img-responsive" alt="Vision">
 						</div>
 						<div class="col-xs-6 col-md-8">
