--- a/contactenos.html
+++ b/contactenos.html
@@ -6,7 +6,7 @@
 				<link rel="stylesheet" href="bs/css/bootstrap.css">
 				<link rel="stylesheet" href="bs/css/bootstrap-grid.css">
 				<link rel="stylesheet" href="css/proyecto.css">
-				<link rel="stylesheet" href="js/html5-simple-date-input-polyfill.css" />
+				<!--<link rel="stylesheet" href="css/html5-simple-date-input-polyfill.css" />-->
 
                 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -54,8 +54,8 @@
 								<div class="form-group row">
 									<label for="fecha" class="col-2 col-form-label">Edad:</label>
 									<div class="col-10">
-										<script src="js/html5-simple-date-input-polyfill.min.js"></script>
 										<input class="form-control" type="date"  id="fecha">
+										<script src="js/html5-simple-date-input-polyfill.min.js"></script>
 									</div>
 								</div>
 
@@ -102,5 +102,7 @@
 						</div>
 					</div>
 				</div>
+				
+				
 		</body>
 </html>
