Grafos agregados con d3

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
                                     <li class="nav-item"><a class="nav-link" href="about.html">Sobre el proyecto</a></li>
                                     <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos?</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
+									<li class="nav-item"><a class="nav-link" href="validacion.html">Validacion</a></li>
                                 </ul>	
                             </nav>
                         </div>
@@ -54,12 +55,12 @@
 
 						</div>
 						<div class="col-xs-6 col-md-4 img-container">
-							<img src="images/Mision1.png" class="img-responsive" alt="Mision">
+							<img src="img/Mision1.png" class="img-responsive" alt="Mision">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-6 col-md-4 img-container">
-							<img src="images/VISION.jpg" class="img-responsive" alt="Vision">
+							<img src="img/VISION.jpg" class="img-responsive" alt="Vision">
 						</div>
 						<div class="col-xs-6 col-md-8">
 							<h3>Vision</h3>
@@ -88,8 +89,8 @@
 											</p>
 										</div>
 										<div class="col-xs-6 col-md-4">
-											<img src="images/logoEspol.png" class="img-responsive" alt="ESPOL">
-											<img src="images/logoFiec.png" class="img-responsive" alt="FIEC">
+											<img src="img/logoEspol.png" class="img-responsive" alt="ESPOL">
+											<img src="img/logoFiec.png" class="img-responsive" alt="FIEC">
 										</div>
 									</div>
 							</footer>
