--- a/contactenos.html
+++ b/contactenos.html
@@ -30,6 +30,7 @@
                                     <li class="nav-item"><a class="nav-link" href="about.html">Sobre el proyecto</a></li>
                                     <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos?</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
+									<li class="nav-item"><a class="nav-link" href="validacion.html">Validacion</a></li>
                                 </ul>	
                             </nav>
                         </div>
@@ -94,8 +95,8 @@
 											</p>
 										</div>
 										<div class="col-4">
-											<img src="images/logoEspol.png" class="img-responsive" alt="ESPOL">
-											<img src="images/logoFiec.png" class="img-responsive" alt="FIEC">
+											<img src="img/logoEspol.png" class="img-responsive" alt="ESPOL">
+											<img src="img/logoFiec.png" class="img-responsive" alt="FIEC">
 										</div>
 									</div>
 							</footer>
