Tercer grafo agregado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				
 				<script src="js/graph.js" defer></script>
 				<script src="js/graph2.js" defer></script>
-				
+				<script src="js/graph3.js" defer></script>
 		</head>
 		<body>
 				<div class="container">
