--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 		<head>
 				<title>Sobre el proyecto-Guayaquiltransactions</title>
 				<meta charset="utf-8">
