Descripcion del site en mision y quienes somos

--- a/about.html
+++ b/about.html
@@ -42,15 +42,38 @@
                     <div class="row">
                         <div class="col-xs-6 col-md-8" >
 							<h3>Mision</h3>
-							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus efficitur hendrerit imperdiet. Donec commodo laoreet tellus a ultrices. 
-								Aliquam a turpis sed urna luctus ultricies. Sed consequat nibh ac nulla vulputate molestie. Praesent iaculis nunc ut pulvinar ultricies. 
-								Vestibulum tincidunt eget urna ac congue. Suspendisse eget tortor eget mauris posuere hendrerit at sit amet urna. Curabitur tortor eros, 
-								pellentesque id tincidunt ut, iaculis vitae lacus. Duis malesuada sem in urna malesuada, quis molestie purus eleifend. Vivamus euismod maximus 
-								lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque vel urna eget diam venenatis gravida. 
-								Curabitur vitae interdum nibh. Phasellus ac orci urna. Mauris et fringilla leo. Proin consectetur pulvinar mattis. Proin molestie ipsum quis risus
-								accumsan facilisis. Nam tempus ullamcorper augue ut varius. Sed posuere nulla nibh. Vestibulum porta quis nulla ac semper. Cras hendrerit cursus 
-								sapien, molestie mattis quam tempor vel. Aliquam varius vitae metus quis lobortis. Phasellus quis commodo purus. Praesent condimentum nisi nec 
-								massa eleifend fringilla. Proin non elementum sapien. Sed dictum, ante non viverra viverra, massa diam bibendum dui, ac gravida enim felis a augue. 
+							<p> 
+								Este proyecto se concierne en visualizar información relevante a las transacciones
+								en la provincia de Guayas, con especial enfoque en la ciudad de Guayaquil.
+								
+								<h4>Descripción</h4>
+								
+								<br>En la página del <a href="index.html">Dash</a> usted podrá encontrar
+								las siguientes opciones:
+								<br>
+								<ul>
+									<li>
+									<a href="index.html#Home">Home</a> que presenta la informacion geografica
+									relevante al canton Guayas.
+									</li>
+									<li>
+									<a href="index.html#Resumen">Resumen</a> visualiza los datos más importatnes relacionados
+									a las transacciones que han ocurrido desde 2001 al 2010 por zonas del canton y sectores
+									especificos de la ciudad de Guayaquil.
+									</li>
+									<li>
+									<a href="index.html#Datos">Datos</a> permite seleccionar cantones de Guayas para ver un resumen
+									breve d lo más relevane encontrado para ese cantón.
+									</li>
+									<li>
+									<a href="index.html#Resultados">Resultados</a> sintetiza los resultados del análisis
+									sobre la información recolectada.
+									</li>
+								</ul>
+								<a href="quienessomos.html">Quienes somos</a> es la sección donde podrá encontrar información
+								referente a los autores de este proyecto
+								<br>Podrá comunicarse con nosotors a través del formulario provisto en 
+								la seccipon de <a href="contactenos.html">Contactenos</a> 
 							</p>
 
 						</div>
