--- a/quienessomos.html
+++ b/quienessomos.html
@@ -35,40 +35,36 @@
                     </div>
 
 					<div class="row">
-						<div class="col-12">
+						<div class="col-sm-7">
 							<h3>Quienes somos?</h3>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus efficitur hendrerit imperdiet. Donec commodo laoreet tellus a ultrices. 
-								Aliquam a turpis sed urna luctus ultricies. Sed consequat nibh ac nulla vulputate molestie. Praesent iaculis nunc ut pulvinar ultricies. 
-								Vestibulum tincidunt eget urna ac congue. Suspendisse eget tortor eget mauris posuere hendrerit at sit amet urna. Curabitur tortor eros, 
-								pellentesque id tincidunt ut, iaculis vitae lacus. Duis malesuada sem in urna malesuada, quis molestie purus eleifend. Vivamus euismod maximus 
-								lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque vel urna eget diam venenatis gravida. 
-								Curabitur vitae interdum nibh. Phasellus ac orci urna. Mauris et fringilla leo. Proin consectetur pulvinar mattis. Proin molestie ipsum quis risus 
-								accumsan facilisis. Nam tempus ullamcorper augue ut varius. Sed posuere nulla nibh. Vestibulum porta quis nulla ac semper. Cras hendrerit cursus
-								sapien, molestie mattis quam tempor vel. Aliquam varius vitae metus quis lobortis. Phasellus quis commodo purus. Praesent condimentum nisi nec
-								massa eleifend fringilla. Proin non elementum sapien. Sed dictum, ante non viverra viverra, massa diam bibendum dui, ac gravida enim felis a augue.
+								Estudiantes de la Escuela Superior Politécnica del Litoral, de la
+								Facultad de Ingeniería en Electrónica y Computación:
+								<ul>
+									<li>Aníbal Gamboa</li>
+									<li>Xavier Andrade</li>
+								</ul>
+								Desarrollo de Aplicaciones Web - Par1 (2018-1T)
 							</p>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-12">
-							<video src="#"></video>
+						<div class="col-sm-5">
+							<img src="img/fiec_edificio.jpg" class="img-responsive col-img" alt="Edificio FIEC">
 						</div>
-
 					</div>
+					
 
 					<div class="row">
 						<div class="col-12">
 							<footer>
 								<div class="container"></div>
 									<div class="row">
-										<div class="col-8">
+										<div class="col-sm-8">
 											<p>Escuela Superior Politécnica del Litoral <br>
 												Desarrollo de Aplicaciones Web <br>
 												All Rights Reserved. <br>
 											</p>
 										</div>
-										<div class="col-4">
+										<div class="col-sm-4">
 											<img src="img/logoEspol.png" class="img-responsive" alt="ESPOL">
 											<img src="img/logoFiec.png" class="img-responsive" alt="FIEC">
 										</div>
