selector y arreglo de galeria

--- a/index.html
+++ b/index.html
@@ -70,12 +70,17 @@
 							</div>
 							<div id="Datos" class="tabcontent">
 								<div class="form-group">
-									<input class="form-control" id="seleccion" list="cantones" placeholder="Canton">										
+									<select class="form-control" id="seleccion">
+											<option>Guayaquil</option>
+											<option>Daule</option>
+											<option>Duran</option>
+									</select>
+									<!-- <input class="form-control" id="seleccion" list="cantones" placeholder="Canton">										
 									<datalist id="cantones">
 										<option>Guayaquil</option>
 										<option>Daule</option>
 										<option>Duran</option>
-									</datalist>
+									</datalist> -->
 								</div>
 									<div class="row">
 									<div id="canton-info" class="col-sm-8">
