--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<body>
 				<div class="container">
 					<div class="row">
-						<div class="col-12">
+						<div class="col-sm-12">
 							<header>
 									<h1>GuayaquilTransactions</h1>
 									<h2>Dashboard project</h2>
@@ -29,7 +29,7 @@
 					</div>
 
 					<div class="row">
-						<div class="col-12">
+						<div class="col-sm-12">
 							<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 								<ul class="nav navbar-nav">
 									<li class="nav-item"><a class="nav-link" href="index.html">Dash</a></li>
@@ -43,7 +43,7 @@
 					</div>
 
 					<div class="row">
-						<div class="col-3">
+						<div class="col-sm-3">
 							<div class="tab">
 								<button class="tablinks" onclick="showTab(event, 'Home')" id="defaultOpen">Home</button>
 								<button class="tablinks" onclick="showTab(event, 'Resumen')">Resumen General</button>
@@ -51,7 +51,7 @@
 								<button class="tablinks" onclick="showTab(event, 'Resultados')">Resultados</button>
 							</div>	
 						</div>
-						<div class="col-9">
+						<div class="col-sm-9">
 							<div id="Home" class="tabcontent">
 								<div class="row">
 									<div class="col-sm-5">
@@ -70,7 +70,7 @@
 								
 							</div>
 							<div id="Datos" class="tabcontent">
-								<div class="form-group">
+								<div class="form-group col-sm-4">
 									<input class="form-control" id="seleccion" list="cantones" placeholder="Canton">										
 									<datalist id="cantones">
 										<option>Guayaquil</option>
@@ -81,7 +81,7 @@
 									<div class="row">
 									<div id="canton-info" class="col-sm-8">
 										<h3></h3>
-										<p></p>
+										<p><em>Seleccione un cantón para visualizar</em></p>
 									</div>
 									<div id="canton-chart" class="col-sm-4">
 									</div>
@@ -105,10 +105,10 @@
 					</div>
 
 					<div class="row">
-						<div class="col-12">
+						<div class="col-sm-12">
 							<footer>								
 								<div class="row">
-									<div class="col-8">
+									<div class="col-sm-8">
 										<p>Escuela Superior Politécnica del Litoral <br>
 											Desarrollo de Aplicaciones Web <br>
 											All Rights Reserved. <br>
