--- a/contactenos.html
+++ b/contactenos.html
@@ -31,6 +31,7 @@
                                     <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos?</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
 									<li class="nav-item"><a class="nav-link" href="validacion.html">Validacion</a></li>
+									<li class="nav-item"><a class="nav-link" href="timeline.html">Procesos</a></li>
                                 </ul>	
                             </nav>
                         </div>
