--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                                     <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos?</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
 									<li class="nav-item"><a class="nav-link" href="validacion.html">Validacion</a></li>
+									<li class="nav-item"><a class="nav-link" href="timeline.html">Procesos</a></li>
 								</ul>	
 							</nav>
 						</div>
@@ -49,6 +50,7 @@
 								<button class="tablinks" onclick="showTab(event, 'Resumen')">Resumen General</button>
 								<button class="tablinks" onclick="showTab(event, 'Datos')">Datos por Canton</button>
 								<button class="tablinks" onclick="showTab(event, 'Resultados')">Resultados</button>
+								
 							</div>	
 						</div>
 						<div class="col-sm-9">
