--- a/quienessomos.html
+++ b/quienessomos.html
@@ -54,27 +54,23 @@
 							<img src="img/fiec_edificio.jpg" class="img-responsive col-img" alt="Edificio FIEC">
 						</div>
 					</div>
-					
-
-					<div class="row">
-						<div class="col-12">
-							<footer>
-								<div class="container"></div>
-									<div class="row">
-										<div class="col-sm-8">
-											<p>Escuela Superior Politécnica del Litoral <br>
-												Desarrollo de Aplicaciones Web <br>
-												All Rights Reserved. <br>
-											</p>
-										</div>
-										<div class="col-sm-4">
-											<img src="img/logoEspol.png" class="img-responsive" alt="ESPOL">
-											<img src="img/logoFiec.png" class="img-responsive" alt="FIEC">
-										</div>
-									</div>
-							</footer>
+				</div>
+				<footer>
+					<div class="container">								
+						<div class="row" id="footer">
+							<div class="col-sm-8">
+								<p>Escuela Superior Politécnica del Litoral <br>
+									Desarrollo de Aplicaciones Web <br>
+									All Rights Reserved. <br>
+								</p>
+							</div>
+							<div class="col-sm-4">
+								<img src="img/logoEspol.png" class="img-responsive" alt="logoEspol">
+								<img src="img/logoFiec.png" class="img-responsive" alt="logoFiec">
+							</div>
 						</div>
 					</div>
-				</div>
+				</footer>
+						
 		</body>
 </html>
